--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     Version: 4.0.3 (Enhancement: UI/UX & Design Polish)
     Framework: Express Series V4
     Project: CHUU.KR - Custom Cakes & Cookies
-    Last Modified: 2025-12-07
+    Last Modified: 2025-12-09
     Author: Maxim
     License: © 2025 Maxim. All Rights Reserved.
 -->
@@ -103,7 +103,7 @@
 
                 <div class="pe-slider js-content-slider">
                     <div class="pe-slider__wrapper">
-                        <!-- Cookie Items 1~6 -->
+                        <!-- Cookie Items 1~9 -->
                         <div class="pe-slider__item">
                             <div class="pe-card">
                                 <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cookies/01.jpg" alt="Cookie 01" class="pe-card__image"></div>
@@ -214,6 +214,64 @@
                                     <div class="pe-price-info__item">
                                         <span class="pe-price-info__label" data-lang="cookies_price_label_6pack"></span>
                                         <span class="pe-price-info__value" data-lang="cookies_06_price_6pack"></span>
+                                    </div>
+                               </div>
+                            </div>
+                        </div>
+                        <!-- New Cookies (07-09) -->
+                        <div class="pe-slider__item">
+                            <div class="pe-card">
+                                <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cookies/07.jpg" alt="Cookie 07" class="pe-card__image"></div>
+                                <div class="pe-card__content">
+                                    <h3 class="pe-card__title" data-lang="cookies_07_title"></h3>
+                                    <p class="pe-card__description" data-lang="cookies_07_desc"></p>
+                                </div>
+                                <div class="pe-price-info">
+                                    <div class="pe-price-info__item">
+                                       <span class="pe-price-info__label" data-lang="cookies_price_label_3pack"></span>
+                                       <span class="pe-price-info__value" data-lang="cookies_07_price_3pack"></span>
+                                   </div>
+                                    <div class="pe-price-info__item">
+                                        <span class="pe-price-info__label" data-lang="cookies_price_label_6pack"></span>
+                                        <span class="pe-price-info__value" data-lang="cookies_07_price_6pack"></span>
+                                    </div>
+                               </div>
+                            </div>
+                        </div>
+                        <div class="pe-slider__item">
+                            <div class="pe-card">
+                                <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cookies/08.jpg" alt="Cookie 08" class="pe-card__image"></div>
+                                <div class="pe-card__content">
+                                    <h3 class="pe-card__title" data-lang="cookies_08_title"></h3>
+                                    <p class="pe-card__description" data-lang="cookies_08_desc"></p>
+                                </div>
+                                <div class="pe-price-info">
+                                    <div class="pe-price-info__item">
+                                       <span class="pe-price-info__label" data-lang="cookies_price_label_3pack"></span>
+                                       <span class="pe-price-info__value" data-lang="cookies_08_price_3pack"></span>
+                                   </div>
+                                    <div class="pe-price-info__item">
+                                        <span class="pe-price-info__label" data-lang="cookies_price_label_6pack"></span>
+                                        <span class="pe-price-info__value" data-lang="cookies_08_price_6pack"></span>
+                                    </div>
+                               </div>
+                            </div>
+                        </div>
+                        <div class="pe-slider__item">
+                            <div class="pe-card">
+                                <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cookies/09.jpg" alt="Cookie 09" class="pe-card__image"></div>
+                                <div class="pe-card__content">
+                                    <h3 class="pe-card__title" data-lang="cookies_09_title"></h3>
+                                    <p class="pe-card__description" data-lang="cookies_09_desc"></p>
+                                </div>
+                                <div class="pe-price-info">
+                                    <div class="pe-price-info__item">
+                                       <span class="pe-price-info__label" data-lang="cookies_price_label_3pack"></span>
+                                       <span class="pe-price-info__value" data-lang="cookies_09_price_3pack"></span>
+                                   </div>
+                                    <div class="pe-price-info__item">
+                                        <span class="pe-price-info__label" data-lang="cookies_price_label_6pack"></span>
+                                        <span class="pe-price-info__value" data-lang="cookies_09_price_6pack"></span>
                                     </div>
                                </div>
                             </div>
